corrigindo retorno GlobalException + compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=desafioTransferenciaSimples
-spring.datasource.url=jdbc:postgresql://db-postgres:5432/db_transferencias
-spring.datasource.username=postgres
-spring.datasource.password=developer
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+#spring.datasource.url=jdbc:postgresql://db-postgres:5432/db_transferencias
+#spring.datasource.username=postgres
+#spring.datasource.password=developer
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
